# Haskel

./: .gitignore  ChangeLog.md  README.md  haskel.cabal  index.html  unsuported.README.md
App/: Main.hs
Console/: Main.hs  MyLib.hs
Console/Src/Fliperama/DataTypes/: Session.hs  User.hs
Console/Src/Fliperama/Repositories/: Session.hs  User.hs
Console/Src/Fliperama/Services/: Actions.hs  User.hs
Console/Src/Fmcc/: Combate.hs  CombateGPT.hs  CombateKanva.hs  CombatePlayHub.hs  Historia.hs  Loja.hs  Main.hs  SistemaGold.hs
Console/Src/Fmcc/Historia/: Fase1.hs  Fase2.hs  Fase3.hs  Final.hs  Prologo.hs
Console/Src/Fmcc/Models/: Conquista.hs  Inimigo.hs  Item.hs  Player.hs  Pocao.hs
Console/Src/Fmcc/Util/: CombateFuncoes.hs  ControleSalvamento.hs  Lib.hs
Console/Src/Tetris/: Main.hs
Console/Src/Tetris/Componentes/: Grid.hs  Pecas.hs  Texto.hs
Console/Src/Tetris/Util/: ControleJogo.hs  Estado.hs  LimparJogo.hs
Src/: MyLib.hs
Src/Fliperama/: Lib.hs
Src/Fliperama/DataTypes/: Session.hs  User.hs
Src/Fliperama/Repositories/: Session.hs  User.hs
Src/Fliperama/Repositories/data/: session.txt  users.txt
Src/Fliperama/Services/: Actions.hs  Session.hs  User.hs
Src/Fliperama/Src/: Main.hs
Src/Fliperama/Src/Services/: Session.hs
Src/Fliperama/Src/Tetris/: Main.hs
Src/Fmcc/: Combate.hs  CombateGPT.hs  CombateKanva.hs  CombatePlayHub.hs  Historia.hs  Loja.hs  Main.hs  SistemaGold.hs
Src/Fmcc/Historia/: Fase1.hs  Fase2.hs  Fase3.hs  Final.hs  Prologo.hs
Src/Fmcc/Models/: Conquista.hs  Inimigo.hs  Item.hs  Player.hs  Pocao.hs
Src/Fmcc/Util/: CombateFuncoes.hs  ControleSalvamento.hs  Lib.hs
Src/Fmcc/pacote/: Heroi.txt
Src/Tetris/: Main.hs
Src/Tetris/Componentes/: Grid.hs  Pecas.hs  Texto.hs
Src/Tetris/Util/: ControleJogo.hs  Estado.hs  LimparJogo.hs
src/Fliperama/src/: Lib.hs  Main  Main.hs
src/Fliperama/src/DataTypes/: Session.hs
src/Tetris/: clear_game.hs  jogo.hs
src/Tetris/JOGO/: Main.hs  controlar_pecas.hs  limpar_linhas.hs  tetris_jogo.hs
(+26 files in other folders)
