cabal-version:      3.0
name:               haskel
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Gabriel-Emannuel
maintainer:         gabriel.emannuel.gama.andrade@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:     base ^>=4.17.2.1, split>=0.2.5, ansi-terminal>=1.1, gloss, mtl >= 2.3.1, directory, process >= 1.6.17.0
    hs-source-dirs:   Src
    default-language: Haskell2010

executable haskel
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1, haskel

    hs-source-dirs:   App
    default-language: Haskell2010
